# webdata

./: README.md
src/: README.md  setup.cfg
src/webdata/: webdata.py
src/webdata_paradox89.egg-info/: PKG-INFO  SOURCES.txt
