[metadata]
name = webdata-paradox89
version = 0.0.1
author = paradox89
author_email = 68936a@gmail.com
description = An easy way to get data from webpages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/89paradox/webdata
project_urls =
    Bug Tracker = https://github.com/89paradox/webdata/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
